Have contrast error on Home, need to fix this

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -174,6 +174,8 @@ main {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    /* TODO: fix this, doesn't look great */
+    background-color: black;
 }
 
 .home-image-banner {
